# pico-drive-sync

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake-single-platform.yml
include/: ssi_enable.h  tusb_config.h
src/: deinit.c  fs_init.c  main.c  ssi_enable.c  usb_descriptors.c  usb_msc.c
